Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRVB.BAS

Public Declare Sub BTIEBR_MsgDataRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgDataRd@16" (ByRef buf As Integer, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Sub BTIEBR_MsgDataWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgDataWr@16" (ByRef buf As Integer, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_MsgFieldRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgFieldRd@12" (ByVal fieldtype As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgFieldWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgFieldWr@16" (ByVal fieldval As Long, ByVal fieldtype As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_MsgGroupRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgGroupRd@16" (ByVal nummsgs As Long, ByRef msgflds As MSGFIELDSEBR, ByRef msgaddrptr As Long, ByVal handleval As Long)
Public Declare Sub BTIEBR_MsgGroupWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgGroupWr@16" (ByVal nummsgs As Long, ByRef msgflds As MSGFIELDSEBR, ByRef msgaddrptr As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_MsgSkipRd Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSkipRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_MsgSkipWr Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSkipWr@12" (ByVal skip As Long, ByVal msgaddr As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_MsgSyncDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgSyncDefine@20" (ByVal enableflag As Long, ByVal syncmask As Integer, ByVal pinpolarity As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_MsgTriggerDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_MsgTriggerDefine@24" (ByVal enableflag As Long, ByVal trigmask As Integer, ByVal trigval As Integer, ByVal pinpolarity As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_PlayConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayConfig@16" (ByVal configval As Long, ByVal rtlinkmask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_PlayStatus Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayStatus@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_PlayWr Lib "BTIEBR.DLL" Alias "_BTIEBR_PlayWr@16" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_RTConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_RTConfig@16" (ByVal configval As Long, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTCreateList Lib "BTIEBR.DLL" Alias "_BTIEBR_RTCreateList@36" (ByVal listconfigval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTCreateMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_RTCreateMsg@28" (ByVal configval As Long, ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTGetMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_RTGetMsg@24" (ByVal mcflag As Long, ByVal rtlink As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTReset Lib "BTIEBR.DLL" Alias "_BTIEBR_RTReset@12" (ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTResponseTimeSet Lib "BTIEBR.DLL" Alias "_BTIEBR_RTResponseTimeSet@16" (ByVal resptime As Long, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTSetMode Lib "BTIEBR.DLL" Alias "_BTIEBR_RTSetMode@16" (ByVal configval As Long, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTSWDRd Lib "BTIEBR.DLL" Alias "_BTIEBR_RTSWDRd@12" (ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_RTSWDWr Lib "BTIEBR.DLL" Alias "_BTIEBR_RTSWDWr@16" (ByVal swdval As Integer, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_RTSyncDefine Lib "BTIEBR.DLL" Alias "_BTIEBR_RTSyncDefine@40" (ByVal enableflag As Long, ByVal syncmask As Integer, ByVal pinpolarity As Integer, ByVal rtlink As Long, ByVal rcvsamask As Long, ByVal xmtsamask As Long, ByVal rcvmcmask As Long, ByVal xmtmcmask As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ValPackCWD Lib "BTIEBR.DLL" Alias "_BTIEBR_ValPackCWD@16" (ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal wcval As Long) As Integer
Public Declare Sub BTIEBR_ValUnpackCWD Lib "BTIEBR.DLL" Alias "_BTIEBR_ValUnpackCWD@20" (ByVal cwdval As Integer, ByRef taval As Long, ByRef trflag As Long, ByRef saval As Long, ByRef wcval As Long)
Public Declare Function BTIEBR_BCCreateListEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCCreateListEx@32" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal cwd As Integer, ByRef data As Integer, ByVal rtlink As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCCreateListExx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCCreateListExx@32" (ByVal listconfigval As Long, ByVal skipval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal cwd As Integer, ByRef data As Integer, ByVal rtlink As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCGetMsg Lib "BTIEBR.DLL" Alias "_BTIEBR_BCGetMsg@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCIMGapRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BCIMGapRd@12" (ByRef gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCIMGapWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BCIMGapWr@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedBranchEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedBranchEx@28" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal opcode As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedCallEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedCallEx@28" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal opcode As Integer, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedLogEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedLogEx@28" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal opcode As Integer, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedNop Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedNop@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedRetryEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedRetryEx@28" (ByVal condition1 As Integer, ByVal condition2 As Integer, ByVal condition3 As Integer, ByVal retryflag As Integer, ByVal retries As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSchedUser Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSchedUser@12" (ByVal useraddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCSetEntry Lib "BTIEBR.DLL" Alias "_BTIEBR_BCSetEntry@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCTransmitMsgBlkEx Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTransmitMsgBlkEx@20" (ByVal writeflag As Long, ByVal count As Long, ByRef xmitfieldsval As XMITFIELDSEBR, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCTransmitMsgBlkInit Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTransmitMsgBlkInit@12" (ByVal maxcount As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCTransmitMsgBlkRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTransmitMsgBlkRd@16" (ByVal count As Long, ByRef xmitfieldsval As XMITFIELDSEBR, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BCTransmitMsgBlkWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BCTransmitMsgBlkWr@16" (ByVal count As Long, ByRef xmitfieldsval As XMITFIELDSEBR, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BlkAddr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkAddr@12" (ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_BlkOptRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkOptRd@12" (ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_BlkOptWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkOptWr@16" (ByVal rtopt As Integer, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BlkPtrRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkPtrRd@12" (ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_BlkPtrWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkPtrWr@16" (ByVal descaddr As Long, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_BlkRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkRd@16" (ByRef block As Integer, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BlkReset Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkReset@12" (ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BlkSWDRd Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkSWDRd@12" (ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Function BTIEBR_BlkSWDWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkSWDWr@16" (ByVal swdval As Integer, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BlkWipe Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkWipe@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_BlkWr Lib "BTIEBR.DLL" Alias "_BTIEBR_BlkWr@16" (ByRef block As Integer, ByVal rtlink As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ChConfig Lib "BTIEBR.DLL" Alias "_BTIEBR_ChConfig@20" (ByVal enableflag As Long, ByVal typeval As Long, ByVal rtlink As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_ChIsRunning Lib "BTIEBR.DLL" Alias "_BTIEBR_ChIsRunning@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdAddr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdAddr@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdAlloc Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdAlloc@8" (ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdAllocEx Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdAllocEx@12" (ByVal configval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdBaseRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdBaseRd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTIEBR_CmdBaseWr Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdBaseWr@12" (ByVal addrval As Long, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTIEBR_CmdClear Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdClear@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTIEBR_CmdCountRd Lib "BTIEBR.DLL" Alias "_BTIEBR_CmdCountRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
